# culvia

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  culvia_app.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
culvia/: __init__.py  acceptance.py  api_errors.py  app_state.py  batch_cli.py  cache_records.py  cache_schema.py  capabilities.py  cli.py  config_payloads.py  curation.py  curation_actions.py  curation_context.py  curation_history.py  curation_payloads.py  curation_service.py  curation_targets.py  curation_undo.py  desktop_files.py  export_service.py  gallery_display.py  image_io.py  insight_store.py  insights.py  job_service.py  job_text.py  llm_client.py  llm_config.py  llm_config_requests.py  llm_config_service.py  llm_model_catalog.py  llm_prompt.py  llm_review.py  llm_review_runner.py  llm_runtime.py  local_model_scoring.py  maintenance.py  media_responses.py  media_service.py  model_files.py  (+28 more)
desktop/tauri/src-tauri/: Cargo.toml  build.rs  entitlements.mac.plist  tauri.conf.json
desktop/tauri/src-tauri/assets/: splash.html
desktop/tauri/src-tauri/icons/: icon.icns
desktop/tauri/src-tauri/src/: main.rs
scripts/: culvia-dev  culvia-dev.ps1
tests/: test_acceptance.py  test_api_errors.py  test_app_icon_generation.py  test_app_state.py  test_backend_smoke.py  test_backend_workflow_smoke.py  test_cache_records.py  test_cache_schema.py  test_capabilities.py  test_clean_macos_app_artifacts.py  test_clean_runtime_artifacts.py  test_config_paths.py  test_config_payloads.py  test_curation_actions.py  test_curation_context.py  test_curation_history.py  test_curation_module.py  test_curation_payloads.py  test_curation_service.py  test_curation_targets.py  test_curation_undo.py  test_desktop_backend_build.py  test_desktop_files.py  test_desktop_readiness.py  test_desktop_release_contract.py  test_desktop_release_preflight.py  test_entrypoints_and_packaging.py  test_export_service.py  test_formal_gate.py  test_frontend_api_client.py  test_frontend_batch_actions.py  test_frontend_clipboard.py  test_frontend_command_view.py  test_frontend_culling_flow.py  test_frontend_export_actions.py  test_frontend_export_preflight_state.py  test_frontend_export_result.py  test_frontend_export_result_data.py  test_frontend_filter_state.py  test_frontend_gallery_keyboard.py  (+67 more)
tools/: build_linux_tgz.py  build_macos_app.py  build_windows_zip.py  check_backend_smoke.py  check_backend_workflow_smoke.py  check_desktop_readiness.py  check_desktop_release_preflight.py  check_desktop_release_workflow.py  check_macos_app_launch_smoke.py  check_macos_app_preflight.py  check_macos_artifact_preflight.py  check_portable_package_preflight.py  check_portable_package_runtime.py  check_secret_store_keychain_smoke.py  clean_macos_app_artifacts.py  clean_runtime_artifacts.py  desktop_release_contract.py  formal_gate.py  generate_app_icons.py  pre_commit_checks.py  prepare_runtime_fixture.py  release_smoke.py  release_status_report.py  write_release_checksum.py  write_release_evidence_manifest.py
web/: api_client.js  app.js  app_config.js  batch_actions.js  clipboard.js  command_view.js  culling_flow.js  distribution_model.js  distribution_panel.js  distribution_view.js  export_actions.js  export_list.js  export_panel.js  export_preflight.js  export_preflight_state.js  export_result.js  export_result_data.js  filter_panel.js  filter_presets.js  filter_state.js  gallery_keyboard.js  gallery_panel.js  gallery_view.js  i18n.js  i18n_messages.js  icons.js  index.html  llm_config_panel.js  llm_config_view.js  main.js  shortcuts.js  (+7 more)
(+46 files in other folders)
