[package]
name = "culvia-desktop"
version = "0.1.0"
description = "Tauri desktop shell for Culvia."
authors = ["Culvia contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["webview-data-url"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
